@@ -1,3 +1,8 @@
+2006-10-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* utils.tcl (BWidget::bindMouseWheel): do not make special
+	mousewheel bindings if global ones exist (like from style::as)
+
 2006-09-28  J. Tang  <tang@jtang.org>
 
 	**** BWIDGET 1.8.0 TAGGED ****
